# metatft-crawler

./: .gitignore  DEVELOPMENT.md  GITHUB_SETUP.md  IMPLEMENTATION_NOTES.md  LANGUAGE_CONFIG_FIXES.md  LANGUAGE_REFACTORING_SUMMARY.md  LICENSE  README.md  TRAITS_REFACTORING.md  pyproject.toml  setup.py  test_crawl_demo.py
demo_output/: demo_vietnamese_20260301_190714.txt  demo_vietnamese_20260301_191056.txt  demo_vietnamese_20260301_191200.txt  demo_vietnamese_20260301_191419.txt  demo_vietnamese_20260301_191500.txt  demo_vietnamese_20260301_201359.txt  demo_vietnamese_20260301_202453.txt  demo_vietnamese_20260301_202634.txt  demo_vietnamese_20260301_203147.txt  units_demo_1.csv  units_demo_10.csv
tests/: test_augments_limit.py  test_language_config.py  test_languages.py
tools/: README.md  analyze_missing_desc.py  check_null_fields.py  check_tier_list_view.py  check_ziggs.py  compare_languages.py  debug_all_damage.py  debug_augments.py  debug_crawl_stats.py  debug_damage_html.py  debug_damage_structure.py  debug_desc_extraction.py  debug_descriptions.py  debug_exact_html.py  debug_full_tooltip_html.py  debug_item_urls.py  debug_items_missing_desc.py  debug_lang_params.py  debug_mana_cost.py  debug_mana_extraction.py  debug_mapping.py  debug_missing_fields.py  debug_nashor_vi.py  debug_page_text.py  debug_stat_labels.py  debug_stats_extraction.py  debug_tactician_crown.py  debug_tactician_crown_stats.py  debug_tooltip_structure.py  debug_vi_extraction.py  debug_vi_structure.py  debug_vietnamese_augments.py  demo_vietnamese.py  find_full_damage.py  find_missing_types.py  (+18 more)
(+17 files in other folders)
